[package]
name = "atm0s-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-util = { version = "0.6", features = ["codec"] }
mqtt-protocol = { version = "0.12.0", features = ["tokio-codec"] }
log = "0.4"
thiserror = "2.0"
futures = "0.3.31"
rustls = { version = "0.23", features = ["ring", "std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
atm0s-small-p2p = { git = "https://github.com/8xFF/atm0s-small-p2p.git", branch = "feat-replicated-alias" }
poem = "3.1"
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"

[dev-dependencies]
httpmock = "0.7.0"
test-log = "0.2.16"
